demo/35-dns-policy/policy-allow-dns-netset-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-dns-netset-egress
spec:
  tier: security
  selector: (app == 'netshoot' || app == 'centos')
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    destination:
      selector: domain == "external"
  - action: Deny
    source: {}
    destination:
      selector: type == "public"
  - action: Pass
    source: {}
    destination: {}
