demo/35-dns-policy/policy-default-deny-calico.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: demo
spec:
  order: 2000
  selector: all()
  types:
  - Ingress
  - Egress
